--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ section {
     background-color: yellow
 }
 
-@-webkit-keyframes rotating /* Safari and Chrome */ {
+@-webkit-keyframes rotating {
     from {
         transform: rotate(0deg);
     }
